overlays/ingress-controller/ingress-path-remove-rewrite.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ${K8S_APP_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /${DOLLAR}2
spec:
  rules:
  - host: ${PROJECT_DOMAIN_NAME}
    http:
      paths:
      - path: ${K8S_URL_PATH}(/|$)(.*)
        backend:
          serviceName: ${PROJECT_NAME}-service
          servicePort: 80
#      - path: ${K8S_URL_PATH}(/|$)(.*)*
#        backend:
#          serviceName: ${PROJECT_NAME}-service
#          servicePort: 80
