overlays/ingress-controller/ingress-path-to-nginx-container.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ${K8S_APP_NAMESPACE}
spec:
  rules:
  - host: ${PROJECT_DOMAIN_NAME}
    http:
      paths:
      - path: ${K8S_NGINX_FILES_LOCATION}
        backend:
          serviceName: ${PROJECT_NAME}-nginx-service
          servicePort: 80
      - path: ${K8S_URL_PATH}
        backend:
          serviceName: ${PROJECT_NAME}-service
          servicePort: 80
#      - path: ${K8S_URL_PATH}*
#        backend:
#          serviceName: ${PROJECT_NAME}-service
#          servicePort: 80
