overlays/ingress-controller/ingress-use-regex-true.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ${PROJECT_DOMAIN_NAME}
    http:
      paths:
      - path: ${K8S_URL_PATH}
        backend:
          serviceName: ${PROJECT_NAME}-service
          servicePort: 80
      - path: ${K8S_URL_PATH}${K8S_INGRESS_REGEX_URL_PATH}
        backend:
          serviceName: ${PROJECT_NAME}-service
          servicePort: 80
